2008-01-28  Jonathan Pryor  <jpryor@novell.com>

	* Stdlib.cs: Obsolete Stdlib.signal(), as it's not safe; see also:
	  http://lists.ximian.com/pipermail/mono-devel-list/2008-January/026501.html
	  http://lists.ximian.com/pipermail/mono-devel-list/2008-January/026503.html
	  Add SetSignalAction() as a replacement.

2008-01-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Syscall.cs: Fix Flock.Equals to avoid NRE (and return false if object 
	is null). Found using Gendarme.

2008-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* Syscall.cs: Add ST_NOEXEC, ST_REMOUNT, ST_BIND to MountFlags.  Patch from
	  Joe Dluzen <jdluzen@gmail.com>.

2007-12-17  Jonathan Pryor  <jonpryor@vt.edu>

	* Syscall.cs: Bind uname(2).

2007-10-25  Jonathan Pryor  <jonpryor@vt.edu>

	* Stdlib.cs: Fix perror(3) so that it works as expected.  (Since errno is
	  cleared during P/Invoke, previously Stdlib.perror("") would always print
	  "Success", which isn't very helpful.)

2007-06-28  Jonathan Pryor  <jonpryor@vt.edu>

	* NativeConvert.generated.cs: Flush (add TryCopy() methods for Utimbuf).
	* Syscall.cs: Map Utimbuf to `struct utimbuf'; needed so that Mono.Fuse can
	  rely on Mono.Posix.dll for copying all native types.

2006-11-14  Jonathan Pryor  <jonpryor@vt.edu>

	* MapAttribute.cs: Update (changes SuppressFlags to a string holding mask).
	* Syscall.cs: Specify the mask value for non-bitmask values in
	  FilePermissions.

2006-10-27  Jonathan Pryor  <jonpryor@vt.edu>

	* MapAttribute.cs: Update (adds SuppressFlags property).
	* Syscall.cs: Mark non-flags FilePermissions enumeration members so that
	  they aren't treated as bitfields.  Impacts e.g. S_IFDIR, S_IFCHR, etc..

2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>

	* HeaderAttribute.cs: Removed.  Use create-native-map command-line arguments
	  instead of HeaderAttribute.Includes & HeaderAttribute.Defines.
	* make-map.cs: Moved to mono-tools/create-native-map/src/create-native-map.cs.