@@ -1,5 +1,5 @@
 /*
- * This file was automatically generated by create-native-map from ../../class/lib/default/Mono.Posix.dll.
+ * This file was automatically generated by create-native-map from ../../class/lib/net_2_0/Mono.Posix.dll.
  *
  * DO NOT MODIFY.
  */
@@ -212,6 +212,22 @@ namespace Mono.Unix.Native {
 			if (ToFilePermissions (value, out rval) == -1)
 				ThrowArgumentException (value);
 			return rval;
+		}
+
+		[DllImport (LIB, EntryPoint="Mono_Posix_FromFlock")]
+		private static extern int FromFlock (ref Flock source, IntPtr destination);
+
+		public static bool TryCopy (ref Flock source, IntPtr destination)
+		{
+			return FromFlock (ref source, destination) == 0;
+		}
+
+		[DllImport (LIB, EntryPoint="Mono_Posix_ToFlock")]
+		private static extern int ToFlock (IntPtr source, out Flock destination);
+
+		public static bool TryCopy (IntPtr source, out Flock destination)
+		{
+			return ToFlock (source, out destination) == 0;
 		}
 
 		[DllImport (LIB, EntryPoint="Mono_Posix_FromLockType")]
@@ -852,6 +868,22 @@ namespace Mono.Unix.Native {
 			if (ToSyslogOptions (value, out rval) == -1)
 				ThrowArgumentException (value);
 			return rval;
+		}
+
+		[DllImport (LIB, EntryPoint="Mono_Posix_FromTimespec")]
+		private static extern int FromTimespec (ref Timespec source, IntPtr destination);
+
+		public static bool TryCopy (ref Timespec source, IntPtr destination)
+		{
+			return FromTimespec (ref source, destination) == 0;
+		}
+
+		[DllImport (LIB, EntryPoint="Mono_Posix_ToTimespec")]
+		private static extern int ToTimespec (IntPtr source, out Timespec destination);
+
+		public static bool TryCopy (IntPtr source, out Timespec destination)
+		{
+			return ToTimespec (source, out destination) == 0;
 		}
 
 		[DllImport (LIB, EntryPoint="Mono_Posix_FromTimeval")]
