@@ -1,3 +1,9 @@
+2008-10-15  Jonathan Pryor  <jpryor@novell.com>
+
+	* Syscall.cs: [Map] Flock, add Timespec, bind nanosleep(2).
+	* NativeConvert.generated.cs: Flush (Add TryCopy methods for Flock,
+	  Timespec).
+
 2008-01-28  Jonathan Pryor  <jpryor@novell.com>
 
 	* Stdlib.cs: Obsolete Stdlib.signal(), as it's not safe; see also:
